[project]
name = "week-6-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "faiss-cpu>=1.10.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.22",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.49",
    "langchain-ollama>=0.3.0",
    "langchain-text-splitters>=0.3.7",
    "langgraph>=0.3.24",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pypdf>=5.4.0",
    "seaborn>=0.13.2",
]
